manifests/00-ingress.yaml
apiVersion: operator.openshift.io/v1alpha1
kind: Ingress
metadata:
  name: cluster
  annotations:
    capability.openshift.io/name: Ingress
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    release.openshift.io/feature-gate: GatewayAPIManagementMode
spec:
  gatewayAPI:
    managementMode: Managed
